force-app/main/default/objects/Report_Card__c/Report_Card__c.object-meta.xml
<CustomObject>
    <label>Report Card</label>
    <nameField>
        <label>Report Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>