force-app/main/default/objects/Report_Card__c/fields/Average__c.field-meta.xml
<CustomField>
    <fullName>Average__c</fullName>
    <formula>( English__c  +  Geography__c + History__c + Math__c )/4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>