force-app/main/default/objects/Report_Card__c/fields/ReportCardTime__c.field-meta.xml
<CustomField>
    <fullName>ReportCardTime__c</fullName>
    <label>ReportCardTime</label>
    <type>DateTime</type>
</CustomField>